test_data/Xml/Unexpected/Unserializable/InvalidClassName/operation/wrong.xml.exception
Expected an element representing an instance of class Operation with element name operation, but got: utterlyInvalid at: the beginning